[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.1'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '7af4c9c9cd6b689db5bcba5b76edc18bca80c781'

[[bin]]
name = 'example'
path = 'src/main.rs'
